--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ markers =
     m3: expected to pass from M3 onward
     m4: expected to pass from M4 onward
     m5: expected to pass from M5 onward
+    m6: expected to pass from M6 onward
