--- a/.github/workflows/ci-milestones.yml
+++ b/.github/workflows/ci-milestones.yml
@@ -2,6 +2,9 @@ name: milestone-tests-and-audit
 
 on:
   push:
+    branches:
+      - main
+      - stage
     paths:
       - ".github/workflows/**"
       - "in/**"
@@ -11,8 +14,6 @@ on:
       - "IMPLEMENTATION_PLAN.md"
       - "semantic_audit.md"
       - "audit_in_versions.md"
-  pull_request:
-  workflow_dispatch:
 
 jobs:
   audit:
@@ -60,9 +61,43 @@ jobs:
           name: pytest-${{ matrix.milestone }}
           path: artifacts/
 
+  tests-gpu:
+    runs-on: [self-hosted, cassian]
+    strategy:
+      fail-fast: false
+      matrix:
+        milestone: [m2]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Verify GPU backend
+        run: |
+          python - <<'PY'
+          import jax
+          gpus = jax.devices("gpu")
+          if not gpus:
+              raise SystemExit("GPU backend required but not available")
+          print("GPU devices:", gpus)
+          PY
+      - name: Install pytest
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install pytest
+      - name: Run pytest (milestone, backend matrix)
+        run: |
+          mkdir -p artifacts
+          set -euo pipefail
+          pytest -c pytest.${{ matrix.milestone }}.ini \
+            --junitxml artifacts/pytest-gpu-${{ matrix.milestone }}.xml \
+            2>&1 | tee artifacts/pytest-gpu-${{ matrix.milestone }}.txt
+      - name: Upload pytest artifact (gpu)
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-gpu-${{ matrix.milestone }}
+          path: artifacts/
+
   collect-report:
     runs-on: ubuntu-latest
-    needs: [audit, tests]
+    needs: [audit, tests, tests-gpu]
     steps:
       - name: Download all artifacts
         uses: actions/download-artifact@v4
