--- a/pytest.ini
+++ b/pytest.ini
@@ -6,3 +6,4 @@ markers =
     m4: expected to pass from M4 onward
     m5: expected to pass from M5 onward
     m6: expected to pass from M6 onward
+    backend_matrix: run the test on cpu and gpu (when available) in one session
