--- a/.github/workflows/ci-milestones.yml
+++ b/.github/workflows/ci-milestones.yml
@@ -16,11 +16,33 @@ on:
       - "audit_in_versions.md"
 
 jobs:
+permissions:
+  contents: read
+
+jobs:
+  policy-check:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      actions: read
+    steps:
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
+      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
+        with:
+          python-version: "3.11"
+      - name: Install policy check dependencies
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install pyyaml
+      - name: Run policy checks
+        run: |
+          python scripts/policy_check.py --workflows --posture
+
   audit:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
+      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
         with:
           python-version: "3.11"
       - name: Generate audit
@@ -28,7 +50,7 @@ jobs:
           mkdir -p artifacts
           python scripts/audit_in_versions.py --output artifacts/audit_in_versions.md
       - name: Upload audit artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: audit
           path: artifacts/audit_in_versions.md
@@ -40,8 +62,8 @@ jobs:
       matrix:
         milestone: [m1, m2, m3, m4, m5]
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
+      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
         with:
           python-version: "3.11"
       - name: Install dependencies
@@ -56,19 +78,20 @@ jobs:
             --junitxml artifacts/pytest-${{ matrix.milestone }}.xml \
             2>&1 | tee artifacts/pytest-${{ matrix.milestone }}.txt
       - name: Upload pytest artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: pytest-${{ matrix.milestone }}
           path: artifacts/
 
   tests-gpu:
-    runs-on: [self-hosted, cassian]
+    if: github.actor == github.repository_owner
+    runs-on: [self-hosted, cassian, gpu, local]
     strategy:
       fail-fast: false
       matrix:
         milestone: [m2]
     steps:
-      - uses: actions/checkout@v4
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
       - name: Verify GPU backend
         run: |
           python - <<'PY'
@@ -90,17 +113,17 @@ jobs:
             --junitxml artifacts/pytest-gpu-${{ matrix.milestone }}.xml \
             2>&1 | tee artifacts/pytest-gpu-${{ matrix.milestone }}.txt
       - name: Upload pytest artifact (gpu)
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: pytest-gpu-${{ matrix.milestone }}
           path: artifacts/
 
   collect-report:
     runs-on: ubuntu-latest
-    needs: [audit, tests, tests-gpu]
+    needs: [policy-check, audit, tests, tests-gpu]
     steps:
       - name: Download all artifacts
-        uses: actions/download-artifact@v4
+        uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093
         with:
           path: collected_report/raw
           merge-multiple: true
@@ -113,7 +136,7 @@ jobs:
           printf "Contents:\n" >> collected_report/README.txt
           sed 's|^|  - |' collected_report/contents.txt >> collected_report/README.txt
       - name: Upload collected report
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@ea165f8d65b6e75b540449e92b4886f43607fa02
         with:
           name: collected-report
           path: collected_report/
