--- a/.github/workflows/ci-milestones.yml
+++ b/.github/workflows/ci-milestones.yml
@@ -18,6 +18,9 @@ on:
 permissions:
   contents: read
 
+env:
+  PYTHON_VERSION: "3.x"
+
 jobs:
   policy-check:
     runs-on: ubuntu-latest
@@ -28,12 +31,14 @@ jobs:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
       - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
         with:
-          python-version: "3.11"
+          python-version: ${{ env.PYTHON_VERSION }}
       - name: Install policy check dependencies
         run: |
           python -m pip install --upgrade pip
           python -m pip install pyyaml
       - name: Run policy checks
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           python scripts/policy_check.py --workflows --posture
 
@@ -43,7 +48,7 @@ jobs:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
       - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
         with:
-          python-version: "3.11"
+          python-version: ${{ env.PYTHON_VERSION }}
       - name: Generate audit
         run: |
           mkdir -p artifacts
@@ -64,7 +69,7 @@ jobs:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
       - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
         with:
-          python-version: "3.11"
+          python-version: ${{ env.PYTHON_VERSION }}
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
@@ -91,6 +96,13 @@ jobs:
         milestone: [m2]
     steps:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
+      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Install test dependencies (GPU)
+        run: |
+          python -m pip install --upgrade pip
+          python -m pip install pytest "jax[cuda12]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
       - name: Verify GPU backend
         run: |
           python - <<'PY'
@@ -100,10 +112,6 @@ jobs:
               raise SystemExit("GPU backend required but not available")
           print("GPU devices:", gpus)
           PY
-      - name: Install pytest
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install pytest
       - name: Run pytest (milestone, backend matrix)
         run: |
           mkdir -p artifacts
