--- a/.github/workflows/ci-milestones.yml
+++ b/.github/workflows/ci-milestones.yml
@@ -19,13 +19,14 @@ permissions:
   contents: read
 
 env:
-  PYTHON_VERSION: "3.x"
+  PYTHON_VERSION: "3.14"
 
 jobs:
   policy-check:
     runs-on: ubuntu-latest
     permissions:
       contents: read
+      administration: read
       actions: read
     steps:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
@@ -96,9 +97,17 @@ jobs:
         milestone: [m2]
     steps:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
-      - uses: actions/setup-python@a26af69be951a213d495a4c3e4e4022e16d87065
-        with:
-          python-version: ${{ env.PYTHON_VERSION }}
+      - name: Verify python version (self-hosted)
+        run: |
+          python - <<'PY'
+          import os
+          import sys
+          want = os.environ["PYTHON_VERSION"]
+          version = sys.version.split()[0]
+          if not version.startswith(want):
+              raise SystemExit(f"Expected Python {want}, found {version}")
+          print("Python version:", version)
+          PY
       - name: Install test dependencies (GPU)
         run: |
           python -m pip install --upgrade pip
