--- a/.github/workflows/ci-milestones.yml
+++ b/.github/workflows/ci-milestones.yml
@@ -7,6 +7,7 @@ on:
       - stage
     paths:
       - ".github/workflows/**"
+      - "ci_trigger.txt"
       - "in/**"
       - "tests/**"
       - "scripts/**"
