--- a/.github/workflows/ci-milestones.yml
+++ b/.github/workflows/ci-milestones.yml
@@ -37,6 +37,28 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python -m pip install pyyaml
+      - name: Diagnose policy token access
+        env:
+          POLICY_GITHUB_TOKEN: ${{ secrets.POLICY_GITHUB_TOKEN }}
+          GITHUB_REPOSITORY: ${{ github.repository }}
+        run: |
+          set -euo pipefail
+          if [ -z "${POLICY_GITHUB_TOKEN:-}" ]; then
+            echo "POLICY_GITHUB_TOKEN is empty"
+            exit 1
+          fi
+          auth_header="Authorization: Bearer ${POLICY_GITHUB_TOKEN}"
+          accept_header="Accept: application/vnd.github+json"
+          base="https://api.github.com/repos/${GITHUB_REPOSITORY}"
+          echo "policy-check diagnostics:"
+          code_user=$(curl -sS -o /dev/null -w "%{http_code}" -H "$accept_header" -H "$auth_header" https://api.github.com/user)
+          echo "  GET /user -> ${code_user}"
+          code_perms=$(curl -sS -o /dev/null -w "%{http_code}" -H "$accept_header" -H "$auth_header" "${base}/actions/permissions")
+          echo "  GET /actions/permissions -> ${code_perms}"
+          code_workflow=$(curl -sS -o /dev/null -w "%{http_code}" -H "$accept_header" -H "$auth_header" "${base}/actions/permissions/workflow")
+          echo "  GET /actions/permissions/workflow -> ${code_workflow}"
+          code_selected=$(curl -sS -o /dev/null -w "%{http_code}" -H "$accept_header" -H "$auth_header" "${base}/actions/permissions/selected-actions")
+          echo "  GET /actions/permissions/selected-actions -> ${code_selected}"
       - name: Run policy checks
         env:
           POLICY_GITHUB_TOKEN: ${{ secrets.POLICY_GITHUB_TOKEN }}
