--- a/pytest.m2.ini
+++ b/pytest.m2.ini
@@ -7,3 +7,5 @@ markers =
     m3: expected to pass from M3 onward
     m4: expected to pass from M4 onward
     m5: expected to pass from M5 onward
+    m6: expected to pass from M6 onward
+    backend_matrix: run the test on cpu and gpu (when available) in one session
