--- a/.github/workflows/ci-milestones.yml
+++ b/.github/workflows/ci-milestones.yml
@@ -175,7 +175,7 @@ jobs:
       - name: Install test dependencies (GPU)
         run: |
           mise exec -- python -m pip install --upgrade pip
-          mise exec -- python -m pip install pytest "jax[cuda12]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
+          mise exec -- python -m pip install pytest nvidia-ml-py "jax[cuda12]" -f https://storage.googleapis.com/jax-releases/jax_cuda_releases.html
       - name: Verify GPU backend
         run: |
           mise exec -- python - <<'PY'
@@ -218,6 +218,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: [policy-check, audit, tests, tests-gpu]
     steps:
+      - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
       - name: Download all artifacts
         uses: actions/download-artifact@d3f86a106a0bac45b974a628896c90dbdf5c8093
         with:
