--- a/.github/workflows/ci-milestones.yml
+++ b/.github/workflows/ci-milestones.yml
@@ -119,6 +119,7 @@ jobs:
     needs: [changes, policy-check, audit]
     if: needs.changes.outputs.code_changed == 'true'
     runs-on: ubuntu-latest
+    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
@@ -131,12 +132,13 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          python -m pip install pytest jax jaxlib
+          python -m pip install pytest pytest-xdist jax jaxlib
       - name: Run pytest (milestone)
         run: |
           mkdir -p artifacts
           set -euo pipefail
           pytest -c pytest.${{ matrix.milestone }}.ini \
+            -n auto \
             --junitxml artifacts/pytest-${{ matrix.milestone }}.xml \
             2>&1 | tee artifacts/pytest-${{ matrix.milestone }}.txt
       - name: Run damage metrics fixture (arena)
@@ -193,6 +195,7 @@ jobs:
     needs: [changes, policy-check, audit]
     if: needs.changes.outputs.code_changed == 'true' && github.actor == github.repository_owner && needs.policy-check.result == 'success' && needs.audit.result == 'success'
     runs-on: [self-hosted, cassian, gpu, local]
+    timeout-minutes: 30
     strategy:
       fail-fast: false
       matrix:
