Adjust milestone bands and classify unmarked tests

--- a/pytest.m1.ini
+++ b/pytest.m1.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --milestone=m1
+addopts = --milestone-band=m1 --include-unmarked
 testpaths = tests
 markers =
     m1: expected to pass from M1 onward
