--- a/pytest.m2.ini
+++ b/pytest.m2.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --milestone=m2
+addopts = --milestone-band=m2
 testpaths = tests
 markers =
     m1: expected to pass from M1 onward
