--- a/pytest.m5.ini
+++ b/pytest.m5.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --milestone=m5
+addopts = --milestone-band=m5
 testpaths = tests
 markers =
     m1: expected to pass from M1 onward
