--- a/pytest.m3.ini
+++ b/pytest.m3.ini
@@ -1,5 +1,5 @@
 [pytest]
-addopts = --milestone=m3
+addopts = --milestone-band=m3
 testpaths = tests
 markers =
     m1: expected to pass from M1 onward
