Pin Agda via cabal and harden hooks

--- a/.github/workflows/ci-milestones.yml
+++ b/.github/workflows/ci-milestones.yml
@@ -122,10 +122,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@34e114876b0b11c390a56381ad16ebd13914f8d5
-      - name: Install Agda (apt)
+      - name: Install GHC + cabal
         run: |
           sudo apt-get update
-          sudo apt-get install -y agda
+          sudo apt-get install -y ghc cabal-install
+      - name: Install Agda (cabal, pinned)
+        run: |
+          set -euo pipefail
+          AGDA_VERSION="$(tr -d '[:space:]' < agda/AGDA_VERSION)"
+          if [ -z "$AGDA_VERSION" ]; then
+            echo "agda/AGDA_VERSION is empty" >&2
+            exit 1
+          fi
+          cabal update
+          cabal install "Agda-${AGDA_VERSION}" \
+            --installdir "$GITHUB_WORKSPACE/.tools/agda/bin" \
+            --install-method=copy \
+            --overwrite-policy=always
+          echo "$GITHUB_WORKSPACE/.tools/agda/bin" >> "$GITHUB_PATH"
       - name: Run Agda checker
         run: |
           scripts/check_agda.sh
