--- a/.github/workflows/ci-milestones.yml
+++ b/.github/workflows/ci-milestones.yml
@@ -12,17 +12,9 @@ on:
       - "**/*.agda"
       - "tests/**"
       - "scripts/**"
+      - "src/**"
       - "prism_vm.py"
       - "ic_vm.py"
-      - "ic_core/**"
-      - "prism_core/**"
-      - "prism_vm_core/**"
-      - "prism_bsp/**"
-      - "prism_coord/**"
-      - "prism_ledger/**"
-      - "prism_semantics/**"
-      - "prism_metrics/**"
-      - "prism_cli/**"
       - "typecheck/**"
 
 permissions:
