ci: include interaction_combinator in triggers

--- a/.github/workflows/ci-milestones.yml
+++ b/.github/workflows/ci-milestones.yml
@@ -15,6 +15,7 @@ on:
       - "src/**"
       - "prism_vm.py"
       - "ic_vm.py"
+      - "interaction_combinator.py"
       - "typecheck/**"
 
 permissions:
