--- a/pytest.baseline.ini
+++ b/pytest.baseline.ini
@@ -1,4 +1,5 @@
 [pytest]
+# Baseline suite: m1 tests + unmarked, running under the current milestone.
 pythonpath = src
 addopts = --milestone-band=m1 --include-unmarked
 testpaths = tests
